--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="style.css" type="text/css" media="all" />
+   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <title>isometric blog design</title>
+ </head>
+ <body>
   <div class="container">
    <div class="box">
     <div class="img-box">
@@ -103,3 +113,6 @@
     </div>
    </div><!--box-->
   </div><!--container-->
+
+ </body>
+</html>
