--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
    <div class="box">
     <div class="img-box">
-     <img src="https://i.ibb.co/gRs5VyW/man-smiling.jpg" alt="" />
+     <img src="/images/guy.jpg" alt="" />
     </div><!-- img-box-->
     <div class="content">
     <h2>Post Title</h2>
@@ -24,7 +24,7 @@
    </div><!--box-->
    <div class="box">
     <div class="img-box">
-     <img src="https://i.ibb.co/8sTYNF7/lady-with-laptop.jpg" alt="" />
+     <img src="/images/lady-smiling.jpg" alt="" />
     </div><!-- img-box-->
     <div class="content">
     <h2>Post Title</h2>
@@ -37,7 +37,7 @@
    </div><!--box-->
    <div class="box">
     <div class="img-box">
-     <img src="https://i.ibb.co/wdD84y6/girl2.jpg">
+     <img src="/images/man-standing-on-pavement.jpg">
     </div><!-- img-box-->
     <div class="content">
     <h2>Post Title</h2>
@@ -50,7 +50,7 @@
    </div><!--box-->
    <div class="box">
     <div class="img-box">
-     <img src="https://i.ibb.co/thFC3BM/a-guy.jpg" alt="" />
+     <img src="/images/man-sitting-on-a-pool-table.jpg" alt="" />
     </div><!-- img-box-->
     <div class="content">
     <h2>Post Title</h2>
@@ -63,7 +63,7 @@
    </div><!--box-->
    <div class="box">
     <div class="img-box">
-     <img src="https://i.ibb.co/NCmvHyg/me-blue-bg.jpg" alt="" />
+     <img src="/images/me-yellow-bg.jpg" alt="" />
     </div><!-- img-box-->
     <div class="content">
     <h2>Post Title</h2>
@@ -76,7 +76,7 @@
    </div><!--box-->
    <div class="box">
     <div class="img-box">
-     <img src="https://i.ibb.co/d47GvNx/ibeh.jpg" alt="" />
+     <img src="/images/little-child.jpg" alt="" />
     </div><!-- img-box-->
     <div class="content">
     <h2>Post Title</h2>
@@ -89,7 +89,7 @@
    </div><!--box-->
    <div class="box">
     <div class="img-box">
-     <img src="https://i.ibb.co/8sTYNF7/lady-with-laptop.jpg" alt="" />
+     <img src="/images/lady.jpg" alt="" />
     </div><!-- img-box-->
     <div class="content">
     <h2>Post Title</h2>
@@ -101,7 +101,7 @@
    </div><!--box-->
       <div class="box">
     <div class="img-box">
-     <img src="https://i.ibb.co/3y1HKHk/guy2.jpg" alt="" />
+     <img src="/images/guy.jpg" alt="" />
     </div><!-- img-box-->
     <div class="content">
      <h2>Post Title</h2>
